refactor: add target observation indices and print type for debugging

--- a/exploring_gymnasium.ipynb
+++ b/exploring_gymnasium.ipynb
@@ -1506,6 +1506,36 @@
     ")'''\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d8f5dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n",
+      " <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_obs_indices = [0, 1]\n",
+    "\n",
+    "test= str(target_obs_indices)\n",
+    "print(\"test\\n\",type(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7830b5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
